Решение задачи 1